# rlife

./: .gitignore  19x4.notes  Cargo.toml  notes
aa/: Cargo.toml
aa/src/: lattice.rs  lib.rs  misc.rs  zmodule.rs
ars/: Cargo.toml
ars/aa/src/: lib.rs  zmodule.rs
ars/ds/: Cargo.toml
ars/ds/src/: bit_state.rs  lib.rs  nice.rs  pointer_rc.rs  scalar.rs
ars/macro/src/: lib.rs
ars/opts/src/: help.rs  parser.rs  trie.rs
ars/par/: Cargo.toml
ars/par/src/: lib.rs
ars/rctl/cli/: Cargo.toml
ars/rctl/core/: Cargo.toml
ars/rctl/main/: Cargo.toml
ars/rctl/main/src/: rq.rs
ars/rctl/test/: Cargo.toml
ars/sync/src/: lib.rs
ars/validates/src/: lib.rs
ds/: Cargo.toml
ds/src/: bit_state.rs  either.rs  err.rs  lib.rs  pointer_rc.rs  scalar.rs  tuple.rs  universe.rs
graph/: Cargo.toml
graph/src/: unweighted.rs  weighted.rs
macro/: Cargo.toml
macro/src/: marker_trait.rs
opts/: Cargo.toml
opts/src/: help.rs  lib.rs  parser.rs  vals.rs
rctl/core/src/: lib.rs
rctl/derive/: Cargo.toml
rctl/main/src/: lib.rs  rq.rs
src/: bfs.rs  bits.rs  chunk_store.rs  dedupe.rs  dfs.rs  gol.rs  lgol.rs  main.rs  sal.rs
src/bfs/: bfs1.rs  bfs2.rs  chunk_queue.rs  kn_pile.rs
src/dfs/: graph.rs  lifecycle.rs  report.rs  res.rs
src/gol/: ends.rs  graph.rs  lifecycle.rs  patlib.rs  printbag.rs
src/lgol/: axis.rs  bg.rs  constraints.rs  ends.rs  graph.rs  lat1.rs  lat2.rs  lattice.rs  lifecycle.rs
sync/: Cargo.toml
sync/src/: wns.rs
validates/: Cargo.toml
validates/src/: lib.rs
validates_derive/: Cargo.toml
validates_derive/src/: lib.rs
(+4 files in other folders)
