[package]
name = "rlife"
version = "1.0.0"
authors = ["Keith Amling <me@amling2.org>"]
edition = "2018"

[dependencies]
chrono = "=0.4.11"
crossbeam = "=0.7.3"
serde_json = "=1.0.48"
serde = { version = "=1.0.105", features = ["derive"] }
ars_ds = { path = "ars/ds" }
ars_macro = { path = "ars/macro" }

[profile.release]
lto = true
