[package]
name = "rlife"
version = "1.0.0"
authors = ["Keith Amling <me@amling2.org>"]
edition = "2018"

[dependencies]
bincode = "=1.2.1"
byteorder = "=1.3.4"
chrono = "=0.4.11"
crossbeam = "=0.7.3"
memmap = "=0.7.0"
serde_json = "=1.0.48"
serde = { version = "=1.0.105", features = ["derive"] }
ars_aa = { path = "ars/aa" }
ars_ds = { path = "ars/ds" }
ars_macro = { path = "ars/macro" }
ars_rctl_core = { path = "ars/rctl/core" }
ars_rctl_derive = { path = "ars/rctl/derive" }
ars_rctl_main = { path = "ars/rctl/main" }

[profile.release]
lto = true
debug = true
